# itps-research-db

./: .env.dev  .env.prod-sample  .env.prod.db-sample  .gitignore  .pre-commit-config.yaml  DEVNOTES.md  README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
app/fixtures/: 2021-02-01-import.json  2021-02-05-data.json  2021-03-22-data.json  2021-07-02-data.json  data-update.json  users-backup.json
app/inventory/: admin.py  models.py  resources.py  tables.py  urls.py  views.py
app/inventory/fixtures/: spring2020-import-dev.json  spring2020-import-prod.json
app/inventory/migrations/: 0001_initial.py  0002_auto_20200929_1442.py  0003_creator_role_item_creator.py  0004_auto_20200929_1525.py  0005_credit.py  0006_credit_user.py  0007_item_title.py  0008_auto_20200930_0313.py  0009_auto_20200930_0320.py  0010_auto_20200930_0429.py  0011_auto_20201112_0425.py  0012_auto_20201124_0304.py  0013_item_creator_pseudonym.py  0014_auto_20210202_0259.py  0015_auto_20210202_0354.py  0016_auto_20210322_2041.py  0017_item_dimensions_item_page_count_item_publisher_and_more.py  0018_alter_creator_role_id_alter_credit_id_alter_item_id_and_more.py  0019_item_pub_date_decade_item_pub_date_descriptive_and_more.py  0020_item_image_item_image_alt_text.py
app/itps_research/: asgi.py  settings.py  urls.py  wsgi.py
app/organizations/: admin.py  models.py
app/people/: admin.py  models.py
app/places/: admin.py  models.py  utils.py  views.py
app/templates/: base.html  index.html
(+35 files in other folders)
